--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 6a1dbcadcae2912ac62f4eaa865698d6ea9f922e2c4598419ad37e7b427c4dfe
+-- hash: 02ea8bdbecb21a41ed2317f69b8c86532b8d0c8c04e53741e52dadd30393e206
 
 name:           advent
 version:        0.1.0.0
@@ -27,18 +27,23 @@ source-repository head
 
 library
   exposed-modules:
+      Prelude
       Solutions
       Solutions.Day01
       Solutions.Day02
       Solutions.Day03
       Solutions.Day04
+      Solutions.Day05
   other-modules:
       Paths_advent
   hs-source-dirs:
       src
+  default-extensions: BlockArguments LambdaCase
+  ghc-options: -Wall
   build-depends:
-      base >=4.7 && <5
+      base-noprelude >=4.7 && <5
     , containers
+    , relude
     , transformers
   default-language: Haskell2010
 
@@ -51,7 +56,7 @@ executable advent-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       advent
-    , base >=4.7 && <5
+    , base-noprelude >=4.7 && <5
     , optparse-generic
   default-language: Haskell2010
 
@@ -65,5 +70,7 @@ test-suite advent-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       advent
-    , base >=4.7 && <5
+    , base-noprelude >=4.7 && <5
+    , tasty
+    , tasty-hunit
   default-language: Haskell2010
