--- a/advent.cabal
+++ b/advent.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: d29f171d7e2ab854f1859801201e8071328aee05829e93e7c3668315f98005a0
+-- hash: ae79a5728061ced13221989f00887dc644d895bfcdc7cc0d71b8a9fc22cf6b23
 
 name:           advent
 version:        0.1.0.0
@@ -37,6 +37,7 @@ library
       Solutions.Day05
       Solutions.Day06
       Solutions.Day07
+      Solutions.Day08
   other-modules:
       Paths_advent
   hs-source-dirs:
